<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff99cc00">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/qTitle"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textSize="@dimen/qTitleSize"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:background="#ffffffff"
        android:height="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textMultiLine"
        android:layout_marginBottom="40dp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Alt1"
        android:id="@+id/textViewAlt1"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fieldAlt1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffffff"
        android:height="40dp"
        android:textColor="#ff000000"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Alt2"
        android:id="@+id/textViewAlt2"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fieldAlt2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffffff"
        android:height="40dp"
        android:textColor="#ff000000"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Alt3"
        android:id="@+id/textViewAlt3"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fieldAlt3"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffffff"
        android:height="40dp"
        android:textColor="#ff000000"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Alt4"
        android:id="@+id/textViewAlt4"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fieldAlt4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffffff"
        android:height="40dp"
        android:textColor="#ff000000"
        android:layout_marginBottom="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qButtonText"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp" />


</LinearLayout>

    </ScrollView>